# bento-tools

./: .gitattributes  .gitignore  .readthedocs.yml  Demo.ipynb  LICENSE  MANIFEST.in  README.md  Sandbox.ipynb  Standardize data format.ipynb  codecov.yml  doc_requirements.txt  environment.yml  pyproject.toml  pyproject_bk.toml  sandbox.ipynb  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: publish_pypi.yml  python-package.yml
bento/: __init__.py  _constants.py  _settings.py  _utils.py  util.py
bento/datasets/: __init__.py  _datasets.py  datasets.csv  merfish_sample.h5ad  seqfish_sample.h5ad
bento/datasets/bt_small_data.zarr/: zmetadata
bento/datasets/merfish_sample.zarr/: zmetadata
bento/datasets/six_cell_data.zarr/: zmetadata
bento/datasets/small_data.zarr/: zmetadata
bento/datasets/tutorial/: cell_stain.tif  nuclear_stain.tif
bento/geometry/: __init__.py  _geometry.py  _ops.py  geometry.py
bento/io/: __init__.py  _index.py  _io.py
bento/models/five_pattern/: history.json
bento/models/multilabel/: cell_edge_history.json  foci_history.json  nuclear_edge_history.json  params.p  perinuclear_history.json  protrusions_history.json  random_history.json
bento/models/patterns/: cell2D_history.json  cell2D_optimizer.pt  cell2D_params.pt  cellext_history.json  cellext_optimizer.pt  cellext_params.pt  foci_history.json  foci_optimizer.pt  foci_params.pt  nuc2D_history.json  nuc2D_optimizer.pt  nuc2D_params.pt  polarized_history.json  polarized_optimizer.pt  polarized_params.pt  random_history.json  random_optimizer.pt  random_params.pt
bento/models/spots/: cell2D.db  cell2D_history.json  cell2D_model.pt  cell2D_optimizer.pt  cell2D_params.pt  cellext.db  cellext_history.json  cellext_model.pt  cellext_optimizer.pt  cellext_params.pt  foci.db  foci_history.json  foci_model.pt  foci_optimizer.pt  foci_params.pt  history.json  nuc2D.db  nuc2D_history.json  nuc2D_model.pt  nuc2D_optimizer.pt  nuc2D_params.pt  optimizer.pt  optuna.db  (+13 more)
bento/plotting/: __init__.py  _colors.py  _embeddings.py  _functional_enrichment.py  _layers.py  _lp.py  _multidimensional.py  _plotting.py  _signatures.py  _tensor_decomposition.py  _tensor_tools.py  _utils.py
bento/preprocessing/: __init__.py  _preprocessing.py
bento/query/: __init__.py  _query.py
bento/tests/: sample_features_test.py  test_io.py  test_pytest.py
bento/tools/: __init__.py  _cell_features.py  _colocation.py  _composition.py  _decomposition.py  _embeddings.py  _features.py  _flow.py  _flux.py  _flux_enrichment.py  _generate_zones.py  _loc_patterns.py  _locfish_features.py  _lp.py  _neighborhoods.py  _neighbors.py  _pattern_models.py  _pattern_stats.py  _patterns.py  _point_features.py  _sample_features.py  _shape_features.py  _shapes.py  _signatures.py  _spots.py  _tensor_tools.py  _tools.py  _utils.py
docs/: Makefile
docs/source/: api.md  api.rst  conf.py  contributing.md  contributors.md  howitworks.md  index.md  index.rst  installation.md  quick_start.md  quick_start.rst  requirements.txt  tutorials.md  tutorials.rst
examples/: cell_membrane.shp  cell_membrane.shx  nucleus.dbf  nucleus.shp  nucleus.shx  spots.csv  spots.dbf  spots.shp  spots.shx
examples/cell1/: spots.csv  spots_logpolar.csv  spots_logpolar_norm.csv  spots_polar.csv  spots_polar_norm.csv
examples/cell2/: spots.csv  spots_logpolar.csv  spots_logpolar_norm.csv  spots_polar.csv  spots_polar_norm.csv
examples/cell3/: spots.csv  spots_logpolar.csv  spots_logpolar_norm.csv  spots_polar.csv  spots_polar_norm.csv
examples/cell4/: spots.csv  spots_logpolar.csv  spots_logpolar_norm.csv  spots_polar.csv  spots_polar_norm.csv
examples/cell5/: spots.csv  spots_logpolar.csv  spots_logpolar_norm.csv  spots_polar.csv  spots_polar_norm.csv
notebooks/: 20240222_xenium_small_crop.ipynb  20240222_xenium_small_tests.ipynb
tests/: conftest.py  profile_runtime.ipynb  test_colocation.py  test_composition.py  test_datasets.py  test_embeddings.py  test_flow.py  test_flux.py  test_flux_enrichment.py  test_flux_plotting.py  test_geo.py  test_geometry.py  test_io.py  test_lp.py  test_lp_plotting.py  test_pattern_tools.py  test_plotting.py  test_point_features.py  test_sample_features.py  test_shape_features.py  test_signatures.py  test_signatures_plotting.py  test_tensor_tools.py  test_ut.py
(+243 files in other folders)
