[tool.poetry]
name = "bento-tools"
packages = [{ include = "bento" }]
include = [
    "bento/datasets/datasets.csv",
    "bento/models/**/*",
    "bento/tools/gene_sets/*",
]
version = "2.0.0a0"
description = "A toolkit for subcellular analysis of spatial transcriptomics data"
authors = ["Clarence Mah <ckmah@ucsd.edu>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
anndata = "^0.7.6"
astropy = "^5.0"
geopandas = "^0.10.0"
matplotlib = "^3.2"
matplotlib-scalebar = "^0.8.1"
pygeos = "^0.12.0"
scanpy = "^1.9.1"
scipy = "^1.7.0"
seaborn = "^0.12.1"
Shapely = "^1.8.2"
Sphinx = { version = "^4.1.2", extras = ["docs"] }
sphinx-autobuild = { version = "^2021.3.14", extras = ["docs"] }
sphinx-book-theme = {version = "^1.0.0", extras = ["docs"] }
sphinx-gallery = { version = "^0.10.1", extras = ["docs"] }
statsmodels = "^0.13.2"
tqdm = "^4.64.0"
UpSetPlot = "^0.6.1"
emoji = "^1.7.0"
tensorly = "^0.7.0"
rasterio = "^1.3.0"
ipywidgets = "^8.0"
decoupler = "^1.2.0"
MiniSom = "^2.3.0"
kneed = "^0.8.1"
adjustText = "^0.7.3"
sparse = "^0.13.0"
pandas = "^1.5.3"
xgboost = "1.4.0"
myst-nb = {version = "^0.17.1", extras = ["docs"]}
sphinx_design = {version = "^0.3.0", extras = ["docs"]}

[tool.poetry.extras]
docs = [
    "Sphinx",
    "sphinx-autobuild",
    "sphinx-book-theme",
    "sphinx-gallery",
    "myst-nb",
    "sphinx_design",
]

[tool.setuptools]
py_modules = []

[build-system]
requires = ["poetry-core>=1.0.0", 'setuptools']
build-backend = "poetry.core.masonry.api"
