[project]
name = "bento-tools"
version = "2.1"
description = "A toolkit for subcellular analysis of spatial transcriptomics data"
authors = [
    { name = "ckmah", email = "clarence.k.mah@gmail.com" }
]
dependencies = [
    "adjusttext>=1.1.1",
    "astropy>=6.0.1",
    "decoupler~=1.4.0",
    "emoji>=2.11.0",
    "kneed>=0.8.5",
    "matplotlib-scalebar>=0.8.1",
    "minisom>=2.3.2",
    "rasterio>=1.3.9",
    "rtree>=1.2.0",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "shapely~=2.0.1",
    "sparse>=0.15.1",
    "spatialdata>=0.1.2",
    "tensorly>=0.8.1",
    "tqdm>=4.66.2",
    "upsetplot>=0.9.0",
    "xgboost>=2.0.3",
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">= 3.9"
include = [
    "bento/datasets/datasets.csv",
    "bento/models/**/*",
    "bento/tools/gene_sets/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bento_tools"]
