[project]
name = "bento-tools"
version = "2.1.2"
description = "A toolkit for subcellular analysis of spatial transcriptomics data"
authors = [
    { name = "ckmah", email = "clarence.k.mah@gmail.com" }
]
dependencies = [
    "adjusttext>=1.1.1",
    "astropy>=6.0.1",
    "decoupler~=1.4.0",
    "emoji>=2.11.0",
    "kneed>=0.8.5",
    "matplotlib-scalebar>=0.8.1",
    "minisom>=2.3.2",
    "pandas<2.0.0",
    "rasterio>=1.3.9",
    "rtree>=1.2.0",
    "scipy~=1.10.0",
    "seaborn>=0.13.2",
    "shapely~=2.0.1",
    "sparse>=0.15.1",
    "spatialdata==0.0.16",
    "tensorly>=0.8.1",
    "tqdm>=4.66.2",
    "upsetplot>=0.9.0",
    "xgboost>=2.0.3",
    "statsmodels>=0.14.1",
    "scikit-learn>=1.4.2",
]
license = "BSD-2-Clause"
readme = "README.md"
requires-python = ">= 3.9"

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.6",
    "sphinx-design>=0.5.0",
    "sphinxawesome-theme>=5.1.1",
    "myst-nb>=1.0.0",
    "sphinx-autodoc-typehints>=2.0.1",
    "sphinx-autobuild<=2024.2.4",
]
torch = [
    "torch>=2.2.2",
]
all = [
    "bento-tools[docs]",
    "bento-tools[torch]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-watcher>=0.4.2",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build]
include = [
    "bento/datasets/datasets.csv",
    "bento/models/**/*",
    "bento/tools/gene_sets/*",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["bento"]
